[gd_scene load_steps=2 format=3 uid="uid://ybyhal16qpat"]

[ext_resource type="Script" uid="uid://ddrpmqt8gkpi6" path="res://Scripts/UI/CombatSetupScreen.gd" id="1_y53k5"]

[node name="CombatSetupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y53k5")

[node name="Panel Izquierdo" type="HSplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 405.0
offset_bottom = 40.0

[node name="Panel Derecho" type="HSplitContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 690.0
offset_top = 89.0
offset_right = 757.0
offset_bottom = 139.0

[node name="Panel Izquierdo2" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1414.0
offset_bottom = 40.0

[node name="Configuración Partida" type="Label" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Configuración Partida"

[node name="EQUIPO 1" type="HBoxContainer" parent="Panel Izquierdo2"]
layout_mode = 2

[node name="Tamaño Equipo 1" type="Label" parent="Panel Izquierdo2/EQUIPO 1"]
layout_mode = 2
text = "Tamaño Equipo 1"

[node name="Team1SizeSpinBox" type="SpinBox" parent="Panel Izquierdo2/EQUIPO 1"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 1.0

[node name="EQUIPO 2" type="HBoxContainer" parent="Panel Izquierdo2"]
layout_mode = 2

[node name="Tamaño Equipo 2" type="Label" parent="Panel Izquierdo2/EQUIPO 2"]
layout_mode = 2
text = "Tamaño Equipo 1"

[node name="Team2SizeSpinBox" type="SpinBox" parent="Panel Izquierdo2/EQUIPO 2"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 1.0

[node name="SeleccionarEscenario" type="Label" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Seleccionar Escenario"

[node name="StageSelectOptionButton" type="OptionButton" parent="Panel Izquierdo2"]
layout_mode = 2

[node name="Personajes Disponibles" type="Label" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Personajes Disponibles"

[node name="AvailableCharsList" type="ItemList" parent="Panel Izquierdo2"]
layout_mode = 2
allow_reselect = true

[node name="StatusLabel" type="Label" parent="Panel Izquierdo2"]
layout_mode = 2
text = "StatusLabel"

[node name="ReadyButton" type="Button" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Listo"

[node name="StartBattleButton" type="Button" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Iniciar Batalla"

[node name="BackButton" type="Button" parent="Panel Izquierdo2"]
layout_mode = 2
text = "Volver al Menú"

[node name="HSplitContainer" type="HSplitContainer" parent="Panel Izquierdo2"]
layout_mode = 2

[node name="Panel Derecho2" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel Derecho2"]
layout_mode = 2

[node name="Equipo 1" type="Label" parent="Panel Derecho2/VBoxContainer"]
layout_mode = 2
text = "Equipo 1"

[node name="Team1SlotsContainer" type="GridContainer" parent="Panel Derecho2/VBoxContainer/Equipo 1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Equipo 2" type="Label" parent="Panel Derecho2/VBoxContainer"]
layout_mode = 2
text = "Equipo 2"

[node name="Team2SlotsContainer" type="GridContainer" parent="Panel Derecho2/VBoxContainer/Equipo 2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
